--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
